Add jekyll-redirect-from plugin to config

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 name: Cascade STEAM
 title: null
 description: STEAM Education, Career Connected Learning, Digital Literacy, and Digital Equity for all people of all ages.
+plugins:
+  - jekyll-redirect-from
