Enable build parameter in Build_Site.yml
Added enablement parameter to the Build Quartz Site workflow.

--- a/.github/workflows/Build_Site.yml
+++ b/.github/workflows/Build_Site.yml
@@ -6,6 +6,8 @@
 # Based on https://github.com/marketplace/actions/build-quartz-for-github-pages
 #
 name: Build Quartz Site
+  with:
+    enablement: true
 on:
 
   push:
