--- a/.github/workflows/Build_Site.yml
+++ b/.github/workflows/Build_Site.yml
@@ -10,8 +10,7 @@ on:
 
   push:
     branches:
-      - main
-      - release/*
+      - publish
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
     paths:
